--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -109,7 +109,7 @@
       android:exported="false"/>
 
     <receiver
-      android:name=".GoalReceiver"
+      android:name=".NotificationReceiver"
       android:enabled="true"
       android:exported="true" />
 
